// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input> should render correctly 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly as disabled 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
  cursor: not-allowed;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #F0F3F7;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
  cursor: not-allowed;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
  cursor: not-allowed;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={true}
      aria-invalid={false}
      aria-readonly={true}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={true}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly as focus 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly as invalid 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #E12D2D;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={true}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly as readonly 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly as required 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={true}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with autoComplete property 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoComplete="off"
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with iconLeft 1`] = `
.c3 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #A4B8D1;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 32px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 8px;
}

.c4 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c4::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c4::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c4:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c4::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px 0 0;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <div
      className="c2"
    >
      <svg
        className="c3"
        color="#A4B8D1"
        disabled={false}
        role="presentation"
        selected={false}
        size={24}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            clipRule="evenodd"
            d="M15.0293 16.09C13.5987 17.2825 11.7581 18 9.75 18 5.1936 18 1.5 14.3063 1.5 9.75c0-4.5564 3.6936-8.25 8.25-8.25C14.3063 1.5 18 5.1936 18 9.75c0 2.0081-.7175 3.8487-1.91 5.2793l6.1903 6.1904a.75.75 0 0 1 0 1.0606.75.75 0 0 1-1.0606 0L15.0293 16.09ZM16.5 9.75c0 3.7279-3.0221 6.75-6.75 6.75C6.022 16.5 3 13.4779 3 9.75 3 6.022 6.022 3 9.75 3c3.7279 0 6.75 3.022 6.75 6.75Z"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </div>
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with iconLeft and value 1`] = `
.c3 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #5E6D7A;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 32px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 8px;
}

.c4 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c4::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c4::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c4:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c4::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px 0 0;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <div
      className="c2"
    >
      <svg
        className="c3"
        color="#5E6D7A"
        disabled={false}
        role="presentation"
        selected={false}
        size={24}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            clipRule="evenodd"
            d="M15.0293 16.09C13.5987 17.2825 11.7581 18 9.75 18 5.1936 18 1.5 14.3063 1.5 9.75c0-4.5564 3.6936-8.25 8.25-8.25C14.3063 1.5 18 5.1936 18 9.75c0 2.0081-.7175 3.8487-1.91 5.2793l6.1903 6.1904a.75.75 0 0 1 0 1.0606.75.75 0 0 1-1.0606 0L15.0293 16.09ZM16.5 9.75c0 3.7279-3.0221 6.75-6.75 6.75C6.022 16.5 3 13.4779 3 9.75 3 6.022 6.022 3 9.75 3c3.7279 0 6.75 3.022 6.75 6.75Z"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </div>
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c4"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
      value="vader"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with iconRight 1`] = `
.c4 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #A4B8D1;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 32px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 8px;
}

.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 0 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    <div
      className="c3"
    >
      <svg
        className="c4"
        color="#A4B8D1"
        disabled={false}
        role="presentation"
        selected={false}
        size={24}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            clipRule="evenodd"
            d="M15.0293 16.09C13.5987 17.2825 11.7581 18 9.75 18 5.1936 18 1.5 14.3063 1.5 9.75c0-4.5564 3.6936-8.25 8.25-8.25C14.3063 1.5 18 5.1936 18 9.75c0 2.0081-.7175 3.8487-1.91 5.2793l6.1903 6.1904a.75.75 0 0 1 0 1.0606.75.75 0 0 1-1.0606 0L15.0293 16.09ZM16.5 9.75c0 3.7279-3.0221 6.75-6.75 6.75C6.022 16.5 3 13.4779 3 9.75 3 6.022 6.022 3 9.75 3c3.7279 0 6.75 3.022 6.75 6.75Z"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </div>
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with iconRight and value 1`] = `
.c4 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #5E6D7A;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 32px;
  min-width: 32px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 0 8px;
}

.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 0 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
      value="vader"
    />
    <div
      className="c3"
    >
      <svg
        className="c4"
        color="#5E6D7A"
        disabled={false}
        role="presentation"
        selected={false}
        size={24}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            clipRule="evenodd"
            d="M15.0293 16.09C13.5987 17.2825 11.7581 18 9.75 18 5.1936 18 1.5 14.3063 1.5 9.75c0-4.5564 3.6936-8.25 8.25-8.25C14.3063 1.5 18 5.1936 18 9.75c0 2.0081-.7175 3.8487-1.91 5.2793l6.1903 6.1904a.75.75 0 0 1 0 1.0606.75.75 0 0 1-1.0606 0L15.0293 16.09ZM16.5 9.75c0 3.7279-3.0221 6.75-6.75 6.75C6.022 16.5 3 13.4779 3 9.75 3 6.022 6.022 3 9.75 3c3.7279 0 6.75 3.022 6.75 6.75Z"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </div>
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with max attribute 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      max={99}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="number"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with maxLength attribute 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      maxLength={10}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with min attribute 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      min={1}
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="number"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with prefix 1`] = `
.c3 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c3::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c3::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c3:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c3::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F0F3F7;
  border: 1px solid #A4B8D1;
  border-right-color: #A4B8D1;
  border-left-color: #A4B8D1;
  box-sizing: border-box;
  color: #5E6D7A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 8px;
  text-align: left;
  -webkit-transition: border-color 150ms;
  transition: border-color 150ms;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  width: 60px;
  border-radius: 0 0 0 0;
}

.c1 > span {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 1px 1px 0;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0 0 0 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  <div
    className="c1"
  >
    <span>
      20%
    </span>
  </div>
  <div
    className="c2"
  >
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c3"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
    
  </div>
  
</div>
`;

exports[`<Input> should render correctly with suffix 1`] = `
.c2 {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  color: #1C2025;
  -webkit-text-fill-color: #1C2025;
  outline: none;
  border: 0;
  margin: 0;
  padding: 0;
  width: 100%;
  background: transparent;
}

.c2::-webkit-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::-moz-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2:-ms-input-placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c2::placeholder {
  color: #A4B8D1;
  -webkit-text-fill-color: #A4B8D1;
}

.c0 {
  background: #FFF;
  border-radius: 0;
  min-height: 40px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin: 4px 0;
  min-width: 40px;
  width: 100%;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F0F3F7;
  border: 1px solid #A4B8D1;
  border-right-color: #A4B8D1;
  border-left-color: #A4B8D1;
  box-sizing: border-box;
  color: #5E6D7A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 8px;
  text-align: left;
  -webkit-transition: border-color 150ms;
  transition: border-color 150ms;
  -webkit-transition-timing-function: ease-in-out;
  transition-timing-function: ease-in-out;
  width: 60px;
  border-radius: 0 0 0 0;
}

.c3 > span {
  font-family: 'Nunito','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 15px;
  font-stretch: normal;
  font-style: normal;
  font-weight: 400;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  line-height: 24px;
  display: inline-block;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  word-wrap: normal;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border-width: 1px 0 1px 1px;
  border-style: solid;
  border-color: #D1DBE8;
  border-radius: 0 0 0 0;
  box-sizing: border-box;
  margin: 0;
  padding: 0 8px;
  -webkit-transition: border-color 150ms ease-in-out;
  transition: border-color 150ms ease-in-out;
}

<div
  className="c0"
  data-id="INPUT"
  data-test-id="INPUT"
  size="default"
>
  
  <div
    className="c1"
  >
    
    <input
      aria-disabled={false}
      aria-invalid={false}
      aria-readonly={false}
      aria-required={false}
      autoFocus={false}
      className="c2"
      data-id="INPUT_FIELD"
      data-test-id="INPUT_FIELD"
      onBlur={[Function]}
      onFocus={[Function]}
      placeholder=""
      readOnly={false}
      type="text"
    />
  </div>
  <div
    className="c3"
  >
    <span>
      20%
    </span>
  </div>
</div>
`;
